<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.dev.jakob.watermanager.WelcomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_welcome" />
    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.dev.jakob.watermanager.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.dev.jakob.watermanager.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
